# ax-pipeline

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_ax620q.sh  build_ax620qp.sh  build_ax630c.sh  build_ax650.sh  build_axcl_aarch64.sh  build_axcl_riscv64.sh  build_axcl_x86.sh  download_ax_bsp.sh
.github/workflows/: build.yml
cmake/: build_func.cmake
configs/: example.json  test_ax630c_h264.json  test_axcl_x86_h264.json  test_axcl_x86_hevc_to_h264.json
docs/: README.md  bench.md  build.md  compile.md  compile_620.md  compile_650.md  config.md  how_to_deploy_custom_model.md  http_api.md  modelzoo.md  rtsp.md
examples/: build_func.cmake
examples/common/: CMakeLists.txt  common_check.cpp  common_func.c  video_demux.hpp
examples/libaxdl/: CMakeLists.txt
examples/sample_demux_ivps_joint_hdmi_vo/: CMakeLists.txt  sample_mp4_ivps_joint_hdmi_vo.cpp
examples/sample_demux_ivps_joint_rtsp/: CMakeLists.txt  sample_mp4_ivps_joint_rtsp.cpp
examples/sample_demux_ivps_joint_rtsp_hdmi_vo/: CMakeLists.txt
examples/sample_demux_ivps_joint_rtsp_vo/: CMakeLists.txt
examples/sample_demux_ivps_joint_vo/: CMakeLists.txt  sample_mp4_ivps_joint_vo.cpp
examples/sample_demux_ivps_npu_hdmi_vo/: README.md  sample_demux_ivps_npu_hdmi_vo.cpp
examples/sample_demux_ivps_npu_rtsp/: CMakeLists.txt  README.md  sample_demux_ivps_npu_rtsp.cpp
examples/sample_demux_ivps_npu_rtsp_hdmi_vo/: README.md  sample_demux_ivps_npu_rtsp_hdmi_vo.cpp
examples/sample_demux_ivps_npu_rtsp_vo/: sample_demux_ivps_npu_rtsp_vo.cpp
examples/sample_demux_ivps_npu_vo/: sample_demux_ivps_npu_vo.cpp
examples/sample_h264_ivps_joint_vo/: CMakeLists.txt  sample_h264_ivps_joint_vo.cpp
examples/sample_mp4_ivps_joint_hdmi_vo/: sample_mp4_ivps_joint_hdmi_vo.cpp
examples/sample_mp4_ivps_joint_rtsp/: sample_mp4_ivps_joint_rtsp.cpp
examples/sample_mp4_ivps_joint_vo/: CMakeLists.txt  README.md  sample_mp4_ivps_joint_vo.cpp
examples/sample_multi_demux_ivps_joint_hdmi_vo/: CMakeLists.txt
examples/sample_multi_demux_ivps_joint_multi_rtsp/: CMakeLists.txt
examples/sample_multi_demux_ivps_joint_multi_rtsp_hdmi_vo/: CMakeLists.txt
examples/sample_multi_demux_ivps_npu_hdmi_vo/: README.md  sample_multi_demux_ivps_npu_hdmi_vo.cpp
examples/sample_multi_demux_ivps_npu_multi_rtsp/: README.md  sample_multi_demux_ivps_npu_multi_rtsp.cpp
examples/sample_multi_demux_ivps_npu_multi_rtsp_hdmi_vo/: README.md  sample_multi_demux_ivps_npu_multi_rtsp_hdmi_vo.cpp
examples/sample_multi_rtsp_ivps_joint_hdmi_vo/: sample_multi_rtsp_ivps_joint_hdmi_vo.cpp
examples/sample_multi_rtsp_ivps_joint_multi_rtsp/: CMakeLists.txt  sample_multi_rtsp_ivps_joint_multi_rtsp.cpp
examples/sample_multi_rtsp_ivps_joint_multi_rtsp_hdmi_vo/: sample_multi_rtsp_ivps_joint_multi_rtsp_hdmi_vo.cpp
examples/sample_rtsp_ivps_joint_hdmi_vo/: sample_rtsp_ivps_joint_hdmi_vo.cpp
examples/sample_rtsp_ivps_joint_rtsp/: CMakeLists.txt  sample_rtsp_ivps_joint_rtsp_vo.cpp
examples/sample_rtsp_ivps_joint_rtsp_hdmi_vo/: sample_rtsp_ivps_joint_rtsp_hdmi_vo.cpp
examples/sample_rtsp_ivps_joint_rtsp_vo/: CMakeLists.txt  sample_rtsp_ivps_joint_rtsp_vo.cpp
examples/sample_rtsp_ivps_joint_vo/: CMakeLists.txt  sample_rtsp_ivps_joint_vo_new.cpp
examples/sample_run_joint/: sample_run_joint.cpp  sample_run_joint_post_process.cpp
examples/sample_v4l2_ivps_joint_vo/: CMakeLists.txt  sample_v4l2_ivps_joint_vo.cpp
examples/sample_v4l2_ivps_npu_vo/: sample_v4l2_ivps_npu_vo.cpp
examples/sample_v4l2_user_ivps_joint_vo/: CMakeLists.txt  sample_v4l2_user_ivps_joint_vo.cpp
examples/sample_v4l2_user_ivps_npu_vo/: sample_v4l2_user_ivps_npu_vo.cpp
examples/sample_vin_ivps_joint_venc_rtsp/: CMakeLists.txt  sample_vin_ivps_joint_venc_rtsp.c  sample_vin_ivps_joint_venc_rtsp.cpp
examples/sample_vin_ivps_joint_venc_rtsp_new/: CMakeLists.txt
examples/sample_vin_ivps_joint_venc_rtsp_vo/: CMakeLists.txt  sample_vin_ivps_joint_venc_rtsp_vo.c  sample_vin_ivps_joint_venc_rtsp_vo.cpp
examples/sample_vin_ivps_joint_venc_rtsp_vo_new/: CMakeLists.txt
examples/sample_vin_ivps_joint_venc_rtsp_vo_onvif_mp4v2/: CMakeLists.txt  sample_vin_ivps_joint_venc_rtsp_vo_onvif_mp4v2.c
examples/sample_vin_ivps_joint_vo/: CMakeLists.txt  sample_vin_ivps_joint_vo.c  sample_vin_ivps_joint_vo.cpp
examples/sample_vin_ivps_joint_vo_h265/: CMakeLists.txt  sample_vin_ivps_joint_vo_h265.cpp
examples/sample_vin_ivps_joint_vo_new/: CMakeLists.txt
examples/sample_vin_ivps_npu_hdmi_vo/: sample_vin_ivps_npu_hdmi_vo.cpp
examples/sample_vin_ivps_npu_venc_rtsp/: sample_vin_ivps_npu_venc_rtsp.cpp
examples/sample_vin_ivps_npu_venc_rtsp_vo/: sample_vin_ivps_npu_venc_rtsp_vo.cpp
examples/sample_vin_ivps_npu_vo/: sample_vin_ivps_npu_vo.cpp
examples/sample_vin_ivps_npu_vo_h265/: sample_vin_ivps_npu_vo_h265.cpp
examples/sample_vin_joint/: sample_vin_joint.c
examples/utilities/: ax_version_check.cpp  osd_utils.cpp  version_compare.cpp  version_compare.h
include/: ax_fs.hpp  config_loader.hpp  fps_controller.hpp
include/ai/: async_infer.hpp  ax_detection.hpp  ax_resize_map.hpp
include/app/: http_api_server.hpp  pipeline_instance.hpp  pipeline_service.hpp
plugins/: CMakeLists.txt
plugins/blank/: CMakeLists.txt  plugin_blank.cpp
plugins/common/: CMakeLists.txt
plugins/common/npu/: CMakeLists.txt
plugins/common/npu/include/npu/models/: ax_model_base.hpp  ax_model_det.hpp
plugins/common/npu/include/npu/runner/: ax_model_runner.hpp
plugins/common/npu/src/npu/models/: ax_model_base.cpp  ax_model_det.cpp
plugins/common/npu/src/npu/runner/ax650/: ax_model_runner_ax650.cpp  ax_model_runner_ax650.hpp
plugins/common/npu/src/npu/runner/axcl/: ax_model_runner_axcl.cpp  ax_model_runner_axcl.hpp  axcl_manager.cpp  axcl_manager.h  axcl_manager.hpp
plugins/yolov5/: CMakeLists.txt  plugin_yolov5.cpp
plugins/yolov8/: CMakeLists.txt  plugin_yolov8.cpp
plugins/yolov8_split/: CMakeLists.txt  plugin_yolov8_split.cpp
scripts/: build_common.sh
src/: main.cpp  mp4_dump_annexb.cpp
toolchains/: aarch64-linux-gnu.toolchain.cmake  riscv64-unknown-linux-gnu.toolchain.cmake
(+86 files in other folders)
